clusters/9ka/pynuts/daemonset-power.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    app.kubernetes.io/component: power
    app.kubernetes.io/instance: pynuts-power
    app.kubernetes.io/name: pynuts
  name: pynuts-power
  namespace: pynuts
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: power
      app.kubernetes.io/instance: pynuts-power
      app.kubernetes.io/name: pynuts
  template:
    metadata:
      labels:
        app.kubernetes.io/component: power
        app.kubernetes.io/instance: pynuts-power
        app.kubernetes.io/name: pynuts
        container.audit.kubernetes.io/pynuts.allow-privileged: ""
    spec:
      containers:
      - env:
        - name: PYNUTS_INPUT_CLS
          value: serialiec62056
        - name: PYNUTS_INPUT_NAME
          value: power
        - name: PYNUTS_SERIAL_VID
          value: "0403"
        - name: PYNUTS_SERIAL_PID
          value: "6001"
        - name: PYNUTS_SERIAL_SERIAL
          value: A9IT5F7J
        - name: PYNUTS_SERIAL_PARITY
          value: "N"
        - name: PYNUTS_SERIAL_STOPBITS
          value: "1"
        - name: PYNUTS_SERIAL_BYTESIZE
          value: "7"
        - name: PYNUTS_SERIAL_BAUDRATE
          value: "115200"
        image: ghcr.io/jonkerj/pynuts
        name: pynuts
        resources:
          limits:
            cpu: 500m
            memory: 128Mi
          requests:
            cpu: 75m
            memory: 32Mi
        securityContext:
          privileged: true
        volumeMounts:
        - mountPath: /dev
          name: hostdev
      nodeSelector:
        feature.node.kubernetes.io/usb-0403_6001_A9IT5F7J.present: "true"
      tolerations:
      - effect: NoSchedule
        key: efgh.nl/location
        value: gangkast
      volumes:
      - hostPath:
          path: /dev
          type: Directory
        name: hostdev
